@@ -497,4 +497,14 @@ then	LANG=C.UTF-8
 fi
 
 # ======
+# https://github.com/ksh93/ksh/issues/861#issuecomment-2917738184
+if	((SHOPT_MULTIBYTE))
+then	LANG=C.UTF-8
+	got=$(set +x; redirect 2>&1; readonly コーンシェル=OK; echo "$コーンシェル")
+	exp=OK
+	[[ $got == "$exp" ]] || err_exit 'declaration command assignment with multibyte variable name' \
+		"(expected $(printf %q "$exp"); got $(printf %q "$got"))"
+fi
+
+# ======
 exit $((Errors<125?Errors:125))
